--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,12 @@
     font-family: "Montserrat", sans-serif;
     background-color: #4a4f4c;
   }
+
+#swoosh {
+ margin-left: -18px;
   
+}
+
 badge {
   background-color: red;
   color: white;
