--- a/commissions/discord-bots/styles.css
+++ b/commissions/discord-bots/styles.css
@@ -9,6 +9,11 @@ body {
   cursor: -webkit-grab; cursor: grab;
 }
 
+.dark-mode {
+   background-color: #222;
+   color: #fff;
+}
+
 * {
   cursor: -webkit-grab; cursor: grab;
 }
