--- a/commissions/discord-bots/styles.css
+++ b/commissions/discord-bots/styles.css
@@ -14,6 +14,20 @@ body {
    color: #fff;
 }
 
+.dark-mode button {
+   background-color: #222;
+   color: #fff;
+   padding: 4px 8px;
+   border-radius: 5px;
+}
+
+button {
+   background-color: #f00;
+   color: #fff;
+   padding: 4px 8px;
+   border-radius: 5px;
+}
+
 * {
   cursor: -webkit-grab; cursor: grab;
 }
